# soa-network

./: .gitignore  README.md
social-network/docs/: network.c4  network.puml
social-network/services/: docker-compose.yml  openapi.yml
social-network/services/api-gateway/: app.py  requirements.txt
social-network/services/api-gateway/tests/: conftest.py  test_api_gateway.py
social-network/services/network-api/: CMakeLists.txt  README.md  requirements.txt  static_config.yaml
social-network/services/network-api/schemas/handlers/users/: login.yaml  profile_info.yaml  signup.yaml  update_profile.yaml
social-network/services/network-api/src/: main.cpp
social-network/services/network-api/src/clients/: network_users_client.cpp  network_users_client.hpp
social-network/services/network-api/src/custom/: dependencies.cpp  dependencies.hpp
social-network/services/network-api/src/fetchers/: network_users.cpp  network_users.hpp
social-network/services/network-api/src/handlers/users/: login.cpp  login.hpp  profile_info.cpp  profile_info.hpp  signup.cpp  signup.hpp  update_profile.cpp  update_profile.hpp
social-network/services/network-api/tests/: conftest.py  test_proxy.py
social-network/services/network-api/testsuite/: conftest.py  test_login.py  test_profile_info.py  test_signup.py  test_update_profile.py
social-network/services/network-posts/: README.md
social-network/services/network-statistics/: README.md
social-network/services/network-users/: CMakeLists.txt  Dockerfile  README.md  auth_bearer.hpp  postgres_service.cpp
social-network/services/network-users/app/: database.py  models.py  routes.py  schemas.py
social-network/services/network-users/tests/: conftest.py  test_models.py  test_routes.py  test_schemas.py
social-network/services/posts-service/: Dockerfile  posts_pb2.py  posts_pb2_grpc.py  requirements.txt
social-network/services/posts-service/app/: database.py  exceptions.py  main.py  models.py  service.py
social-network/services/posts-service/proto/: posts.proto
social-network/services/posts-service/tests/: test_service.py
social-network/services/users-service/: requirements.txt  test.db
social-network/services/users-service/app/: database.py  main.py  models.py
social-network/services/users-service/tests/: conftest.py  test_models.py  test_routes.py
